<resources>
    <string name="app_name">defult</string>
    <string name="action_settings">Settings</string>
    <string name="choose_sms_app">Set as default</string>
    <string name="sms_empty">No SMS messages</string>
    <string name="set_default_sms_text">This app is not the default SMS app</string>
    <string name="sms_send_new_hint">Send new SMS</string>
    <string name="sms_send">Send</string>
    <string name="sms_send_disabled">SMS Sending Disabled</string>
</resources>
