<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/set_default_sms_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@color/alert_orange">

        <Button
            android:id="@+id/set_default_sms_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/choose_sms_app" />

        <TextView
            android:id="@+id/set_default_sms_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/set_default_sms_button"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/set_default_sms_text" />

    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:fastScrollEnabled="true" />

    <TextView
        android:id="@android:id/empty"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:layout_margin="@dimen/standard_margin"
        style="?android:textAppearanceMedium"
        android:text="@string/sms_empty" />

    <RelativeLayout
        android:id="@+id/send_sms_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_margin"
        android:background="@color/light_gray">

        <Button
            android:id="@+id/send_sms_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/sms_send" />

        <EditText
            android:id="@+id/send_sms_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/send_sms_button"
            android:layout_centerVertical="true"
            android:hint="@string/sms_send_new_hint"/>

    </RelativeLayout>

</LinearLayout>
